migrates to java 25
uses latest language apis and features