@@ -39,7 +39,7 @@ public class OntologyNameInjector extends AbstractValueInjector<BasicOntology, C
 
         List<BasicOntology.Result> results = response.getResults();
         if (!results.isEmpty()) {
-            completableValue.setValue(results.get(0).getName());
+            completableValue.setValue(results.getFirst().getName());
         }
     }
 }
