@@ -134,7 +134,7 @@ class StatsConfigsAreAppliedIT extends SolrContainerTestSetup {
     }
 
     private String statsValuesJSONPath(String statType, String subType) {
-        return String.format(STATS_VALUES_JSON_PATH_FORMAT, statType, subType);
+        return STATS_VALUES_JSON_PATH_FORMAT.formatted(statType, subType);
     }
 
     /**
@@ -157,7 +157,7 @@ class StatsConfigsAreAppliedIT extends SolrContainerTestSetup {
     }
 
     private String createGOId(int idNum) {
-        return String.format("GO:000%03d", idNum);
+        return "GO:000%03d".formatted(idNum);
     }
 
     /**
