@@ -217,7 +217,7 @@ class AnnotationToGAFTest {
         List<String> converted = annotationToGAF.apply(annotation, null);
 
         assertThat(converted, hasSize(annotation.slimmedIds.size()));
-        checkReturned(slimmedToGoId0, converted.get(0));
+        checkReturned(slimmedToGoId0, converted.getFirst());
         checkReturned(slimmedToGoId1, converted.get(1));
         checkReturned(slimmedToGoId2, converted.get(2));
     }
@@ -402,7 +402,7 @@ class AnnotationToGAFTest {
     }
 
     private String[] annotationToDownloadColumns(Annotation annotation) {
-        return annotationToGAF.apply(annotation, null).get(0)
+        return annotationToGAF.apply(annotation, null).getFirst()
                 .split(OUTPUT_DELIMITER, -1);
     }
 }
