@@ -57,7 +57,7 @@ class CoTermIndexingBatchIT {
                 .collect(Collectors.toList());
         assertThat(jobsSingleStepAsList, hasSize(1));
 
-        StepExecution readingStep = jobsSingleStepAsList.get(0);
+        StepExecution readingStep = jobsSingleStepAsList.getFirst();
 
         assertThat(readingStep.getReadCount(), is(8L));
         assertThat(readingStep.getReadSkipCount(), is(0L));
@@ -71,7 +71,7 @@ class CoTermIndexingBatchIT {
                         .equals(CO_TERM_MANUAL_SUMMARIZATION_STEP))
                 .collect(Collectors.toList());
         assertThat(summarizeCoTermManualSteps, hasSize(1));
-        StepExecution coTermsManualStep = summarizeCoTermManualSteps.get(0);
+        StepExecution coTermsManualStep = summarizeCoTermManualSteps.getFirst();
         assertThat(coTermsManualStep.getReadCount(), is(4L));
         assertThat(coTermsManualStep.getReadSkipCount(), is(0L));
         assertThat(coTermsManualStep.getProcessSkipCount(), is(0L));
@@ -83,7 +83,7 @@ class CoTermIndexingBatchIT {
                         .equals(CO_TERM_ALL_SUMMARIZATION_STEP))
                 .collect(Collectors.toList());
         assertThat(summarizeCoTermAllSteps, hasSize(1));
-        StepExecution coTermsAllStep = summarizeCoTermAllSteps.get(0);
+        StepExecution coTermsAllStep = summarizeCoTermAllSteps.getFirst();
         assertThat(coTermsAllStep.getReadCount(), is(5L));
         assertThat(coTermsAllStep.getReadSkipCount(), is(0L));
         assertThat(coTermsAllStep.getProcessSkipCount(), is(0L));
