@@ -159,7 +159,7 @@ class PresetsSuccessfulRelevancyFetchingIT {
         assertThat(presets.getGoSlimSets(), hasSize(4));
 
         List<PresetItem> presetItems = presets.getGoSlimSets();
-        assertThat(presetItems.get(0), is(equalTo(MockPresetDataConfig.PRESET_GO_SLIM_ASPERGILLUS)));
+        assertThat(presetItems.getFirst(), is(equalTo(MockPresetDataConfig.PRESET_GO_SLIM_ASPERGILLUS)));
         assertThat(presetItems.get(1), is(equalTo(MockPresetDataConfig.PRESET_GO_SLIM_METAGENOMICS)));
         assertThat(presetItems.get(2), is(equalTo(MockPresetDataConfig.PRESET_GO_SLIM_POMBE)));
         assertThat(presetItems.get(3), is(equalTo(MockPresetDataConfig.PRESET_GO_SLIM_SYNAPSE)));
@@ -175,7 +175,7 @@ class PresetsSuccessfulRelevancyFetchingIT {
 
         assertThat(status, is(BatchStatus.COMPLETED));
         final List<PresetItem> presetItems = presets.getTaxons();
-        assertThat(presetItems.get(0), is(equalTo(MockPresetDataConfig.PRESET_TAXON_ARABIDOPSIS)));
+        assertThat(presetItems.getFirst(), is(equalTo(MockPresetDataConfig.PRESET_TAXON_ARABIDOPSIS)));
         assertThat(presetItems.get(1), is(equalTo(MockPresetDataConfig.PRESET_TAXON_DROSOPHILA)));
     }
 
