@@ -43,12 +43,11 @@ public class PeriodParserDayTime extends PeriodParser {
         if (fromTo.length == REQUIRED_DATE_MODIFYING_INSTANCES) {
             List<DayTime> durationList = Arrays.stream(fromTo)
                                                .map(this::mapToDayTime)
-                                               .filter(Optional::isPresent)   //replace these two lines with
-                                               .map(Optional::get)            //.map(Optional::stream) in Java 9
-                                               .collect(toList());
+                                               .flatMap(Optional::stream)
+                                               .toList();
             LOGGER.debug("Created durationList " + durationList);
             if (durationList.size() == REQUIRED_DATE_MODIFYING_INSTANCES) {
-                return Optional.of(new AlarmClockDayTime(durationList.get(0), durationList.get(1)));
+                return Optional.of(new AlarmClockDayTime(durationList.getFirst(), durationList.get(1)));
             }
         }
         return Optional.empty();
