@@ -42,12 +42,11 @@ public class PeriodParserMonthTime extends PeriodParser {
         if (fromTo.length == REQUIRED_DATE_MODIFYING_INSTANCES) {
             List<MonthTime> durationList = Arrays.stream(fromTo)
                                                  .map(this::mapToMonthTime)
-                                                 .filter(Optional::isPresent)   //replace these two lines with
-                                                 .map(Optional::get)            //.map(Optional::stream) in Java 9
-                                                 .collect(toList());
+                                                 .flatMap(Optional::stream)
+                                                 .toList();
             LOGGER.debug("Created durationList " + durationList);
             if (durationList.size() == REQUIRED_DATE_MODIFYING_INSTANCES) {
-                return Optional.of(new AlarmClockMonthTime(durationList.get(0), durationList.get(1)));
+                return Optional.of(new AlarmClockMonthTime(durationList.getFirst(), durationList.get(1)));
             }
         }
         return Optional.empty();
